src/snapshots/tptp__top__tests__general_data-7.snap
---
source: src/top.rs
expression: parsed
---
Formula(
    Fof(
        Logic(
            Unitary(
                Atomic(
                    Plain(
                        PlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
