src/snapshots/tptp__top__tests__tptp_input-5.snap
---
source: src/top.rs
expression: parsed
---
Annotated(
    Fof(
        FofAnnotated(
            Annotated {
                name: AtomicWord(
                    Lower(
                        LowerWord(
                            "test",
                        ),
                    ),
                ),
                role: FormulaRole(
                    LowerWord(
                        "axiom",
                    ),
                ),
                formula: Logic(
                    Unitary(
                        Atomic(
                            Defined(
                                Plain(
                                    DefinedPlainFormula(
                                        Constant(
                                            DefinedConstant(
                                                DefinedFunctor(
                                                    AtomicDefinedWord(
                                                        DollarWord(
                                                            LowerWord(
                                                                "true",
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
                annotations: Annotations(
                    None,
                ),
            },
        ),
    ),
)
